# openterface-rs

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  SECURITY.md  deny.toml  flake.nix  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
crates/openterface-cli/: Cargo.toml
crates/openterface-cli/src/: cli.rs  commands.rs  main.rs
crates/openterface-cli/tests/: cli.rs  harness_framing.rs
crates/openterface-core/: Cargo.toml
crates/openterface-core/src/: device.rs  error.rs  event.rs  lib.rs  paste.rs
crates/openterface-core/src/decode/: mod.rs
crates/openterface-core/src/discovery/: mod.rs
crates/openterface-core/src/input/: mod.rs
crates/openterface-core/src/pacing/: mod.rs
crates/openterface-core/src/protocol/: ch9329.rs  hid.rs  mod.rs
crates/openterface-core/src/serial/: backend.rs  mod.rs
crates/openterface-core/src/session/: mod.rs
crates/openterface-core/src/video/: backend.rs  mod.rs
crates/openterface-core/tests/: pty_serial.rs  vertical_slice.rs
crates/openterface-gui/: Cargo.toml
crates/openterface-gui/src/: app.rs  clipboard.rs  coord.rs  fit.rs  input_map.rs  lib.rs  paste.rs  renderer.rs  throttle.rs
crates/openterface-gui/tests/: headless_render.rs
crates/openterface-test-support/: Cargo.toml
crates/openterface-test-support/src/: lib.rs
docs/: README.md
docs/explanation/: testing-and-simulation.md  threading-model.md  v4l2-spike.md  wayland-input-spike.md  wgpu-spike.md
docs/how-to/: build.md  closed-loop-harness.md  install.md  permissions-udev.md  troubleshooting.md
docs/reference/: cli-help.txt  cli.md  cpp-cli-behavior.md  device-ids.md  env-vars.md  protocol.md
nix/: prebuilt.json  prebuilt.nix
packaging/: install.sh
packaging/nixos/: README.md  module.nix  openterface-rs.nix
packaging/udev/: 60-openterface.rules
panel-roles/: build-ci.md  docs.md  input.md  parity.md  product.md  protocol.md  rust.md  security.md  test.md  video.md
scripts/: changelog-check.sh
tools/: kvm-debug.sh
