[package]
name = "openterface-cli"
description = "Command-line frontend for openterface-rs (the `openterface-rs` binary)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "openterface-rs"
path = "src/main.rs"

[features]
# Real device support: pulls the OS-backed serial + V4L2 backends and the
# winit/wgpu display. Off by default so the binary (and `cargo test`) build with
# no system libraries; the release/Nix build (and CI typecheck) enable it.
# `scan`/`status` work without it (pure sysfs); `reset`/`connect` require it.
hardware = [
    "openterface-core/serial-backend",
    "openterface-core/video-backend",
    "dep:openterface-gui",
    "openterface-gui/display",
]

[dependencies]
openterface-core.workspace = true
openterface-gui = { path = "../openterface-gui", optional = true }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[lints]
workspace = true
