[package]
name = "openterface-core"
description = "Device-agnostic core for the Openterface Mini-KVM (protocol, capture, input, session)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
