[package]
name = "openterface-core"
description = "Device-agnostic core for the Openterface Mini-KVM (protocol, capture, input, session)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
zune-jpeg = "0.4"
serialport = { version = "4", optional = true }

[features]
# Real OS-backed serial transport (links libudev on Linux for enumeration).
# Off by default so the no-hardware test build stays light and fast.
serial-backend = ["dep:serialport"]

[dev-dependencies]
proptest = "1"
nix = { version = "0.29", features = ["term", "fs"] }

[lints]
workspace = true
