[package]
name = "openterface-test-support"
description = "Simulated devices and fixtures for testing openterface-core with no hardware."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
openterface-core.workspace = true

[lints]
workspace = true
